# stock-price

./: .gitignore  pyproject.toml
main_database/: env.py  main_database_service.py  setting_database.py  settings_db.json
main_database/database/: MSFT.csv
src/repositories/: db_context.py  repository.py
src/scratch/: scratch.py
test/: test_scratch.py
